[FI-API] ADD resend activation email method

--- a/flavour-it-backend/src/modules/email-sender/templates/create-account.hbs
+++ b/flavour-it-backend/src/modules/email-sender/templates/create-account.hbs
@@ -1,7 +1,7 @@
 <html>
 
 <body>
-    <p>Click <a href={{code}}>this link</a> to active your account</p>
+    <p>Click <a href={{code}}>this link</a> to activate your account</p>
 </body>
 
 </html>
